<resources>
    <string name="app_name">Bola</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search...</string>
    <string name="vs">VS</string>

    <string name="warning">Match has not conducted</string>
    <string name="data_not_found">Match not found</string>
    <string name="league_id">4328</string>
    <string name="error_text">Something Occurred</string>

    <string name="match_detail">Match Detail</string>
    <string name="find_match">Find Match</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>
    <string name="find_team">Find Team</string>
    <string name="team_list">Team List</string>
    <string name="fav_match">Favourite Match</string>
    <string name="fav_team">Favourite Team</string>

    <string name="data_deleted">Data has deleted</string>
    <string name="data_saved">Data Saved!</string>

    <string name="away_card">Away Card</string>
    <string name="home_card">Home Card</string>
    <string name="away_scorer">Away scorer</string>
    <string name="home_scorer">Home scorer</string>
    <string name="none">None</string>
    <string name="home_formation">Home Formation</string>
    <string name="away_formation">Away Formation</string>
    <string name="goal_kepper">Goal Kepper</string>
    <string name="midfield">Midfield</string>
    <string name="defenses">Defenses</string>
    <string name="forward">Forward</string>
    <string name="substitute">Substitute</string>
    <string name="formed_at">Formed at:</string>

    <string name="website">Website:</string>
    <string name="youtube">Youtube:</string>
    <string name="player_list">Player List</string>
    <string name="name">Name:</string>
    <string name="position">Position:</string>
    <string name="wage">Wage:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>

    <string-array name="match_list">
        <item>English Premier League</item>
        <item>UEFA Championship</item>
        <item>Italian Serie A</item>
        <item>La Liga</item>
        <item>FIFA World Cup</item>
    </string-array>

    <string-array name="team_match_list">
        <item>English Premier League</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>La Liga</item>
        <item>FIFA World Cup</item>
    </string-array>
</resources>
