<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <ImageView
            android:id="@+id/player_thumbnail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/player_thumbnail"
            android:orientation="vertical"
            android:layout_centerVertical="true">

        <TextView
                android:id="@+id/player_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/name"/>

        <TextView
                android:id="@+id/player_position"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/position"/>

        <TextView
                android:id="@+id/player_wage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/wage"/>
    </LinearLayout>
</RelativeLayout>