<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include layout="@layout/app_bar_main"/>
    <include layout="@layout/item_list"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="8dp"/>

    <ScrollView
            android:id="@+id/detail_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="16dp">

                <TableRow>
                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/home_scorer"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/away_scorer"
                            android:gravity="end"
                            android:textSize="16sp"
                            android:textStyle="bold"/>
                </TableRow>

                <TableRow>
                    <TextView
                            android:id="@+id/detail_home_scorer"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/none"/>

                    <TextView
                            android:id="@+id/detail_away_scorer"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="end"
                            android:text="@string/none"
                            android:layout_weight="1"/>
                </TableRow>

                <TableRow android:layout_marginTop="16dp">
                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/home_card"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/away_card"
                            android:gravity="end"
                            android:textSize="16sp"
                            android:textStyle="bold"/>
                </TableRow>

                <TableRow>
                    <TextView
                            android:id="@+id/detail_home_card"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/none"/>

                    <TextView
                            android:id="@+id/detail_away_card"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="end"
                            android:text="@string/none"
                            android:layout_weight="1"/>
                </TableRow>

                <TableRow android:layout_marginTop="16dp">
                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/home_formation"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/away_formation"
                            android:gravity="end"
                            android:textSize="16sp"
                            android:textStyle="bold"/>
                </TableRow>

                <TableRow>
                    <TextView
                            android:id="@+id/detail_home_goal"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/none"/>

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:textStyle="bold"
                            android:text="@string/goal_kepper"/>

                    <TextView
                            android:id="@+id/detail_away_goal"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="end"
                            android:text="@string/none"
                            android:layout_weight="1"/>
                </TableRow>

                <TableRow>
                    <TextView
                            android:id="@+id/detail_home_mid"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/none"/>

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:textStyle="bold"
                            android:text="@string/midfield"/>

                    <TextView
                            android:id="@+id/detail_away_mid"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="end"
                            android:text="@string/none"
                            android:layout_weight="1"/>
                </TableRow>

                <TableRow>
                    <TextView
                            android:id="@+id/detail_home_def"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/none"/>

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:textStyle="bold"
                            android:text="@string/defenses"/>

                    <TextView
                            android:id="@+id/detail_away_def"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="end"
                            android:text="@string/none"
                            android:layout_weight="1"/>
                </TableRow>

                <TableRow>
                    <TextView
                            android:id="@+id/detail_home_fwd"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/none"/>

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:textStyle="bold"
                            android:text="@string/forward"/>

                    <TextView
                            android:id="@+id/detail_away_fwd"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="end"
                            android:text="@string/none"
                            android:layout_weight="1"/>
                </TableRow>

                <TableRow>
                    <TextView
                            android:id="@+id/detail_home_sub"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/none"/>

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:textStyle="bold"
                            android:text="@string/substitute"/>

                    <TextView
                            android:id="@+id/detail_away_sub"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:gravity="end"
                            android:text="@string/none"
                            android:layout_weight="1"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>